# pydantic-sql-bridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pydantic_sql_bridge/: pydantic_first.py  read_write.py  sql_first.py  utils.py
tests/: test_pydantic_first.py  test_read_write.py  test_sql_first.py  test_transform.py
