[tool.poetry]
name = "pydantic-sql-bridge"
version = "0.0.2"
description = "A simple bridge between SQL databases and Pydantic"
authors = ["Rik <rik.de.kort@hey.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydantic_sql_bridge"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.*"
sqlglot = { git = "https://github.com/tobymao/sqlglot.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
